--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "cypress/globals": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -17,12 +18,14 @@
     },
     "plugins": [
         "react",
-        "react-hooks"
+        "react-hooks",
+        "cypress"
     ],
     "rules": {
         "linebreak-style": "off",
         "no-alert": "off",
         "no-underscore-dangle": "off",
+        "no-console": "off",
         "import/prefer-default-export": "off",
         "react/jsx-filename-extension": "off",
         "react-hooks/rules-of-hooks": "error",
